--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ stevedore>=0.14
 websockify>=0.5.1,<0.6
 wsgiref>=0.1.2
 oslo.config>=1.2.0,<1.5
+oslo.i18n<2.0
 oslo.rootwrap<1.4
 pycadf>=0.4.1,<0.6.0
 oslo.messaging>=1.3.0,<1.5
